--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ html {
 /* Banner  */
 .banner {
   position: relative;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   display: flex;
@@ -61,7 +61,7 @@ html {
   top: 0;
   left: 0;
   width: 100%;
-  height: 800px;
+  height: 900px;
   object-fit: cover;
 }
 
@@ -96,26 +96,170 @@ html {
   font-weight: 500;
 }
 
-.about {
+.games {
   position: relative;
   background-color: violet;
 }
 
 .game {
   position: relative;
-  margin-top: 70px;
+  margin-top: 168px;
   height: 100%;
   background-image: url(assets/assets/the-games-bg.jpg);
   background-size: cover;
+  display: flex;
 }
 
 .title {
-  margin-top: 250px;
-  margin-right: 100px;
+  margin-top: 200px;
+  margin-left: 150px;
   color: white;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .slide {
   margin-left: 150px;
-  padding-bottom: 80px;
+  padding-bottom: 70px;
+}
+.contentfeat {
+  position: relative;
+  max-width: 750px;
+  /* text-align: center; */
+  margin-left: 400px;
+  margin-top: -150px;
+}
+.features {
+  position: relative;
+  max-width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  display: flex;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.features img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
+}
+.features .contentfeat h6 {
+  color: white;
+  margin-left: 42rem;
+  white-space: nowrap;
+}
+.features .contentfeat h1 {
+  color: white;
+  margin-left: 42rem;
+  margin-bottom: 5rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+/* .contentfeat2 {
+  margin-top: 30px;
+} */
+.contentfeat2 {
+  position: relative;
+  margin-top: 200px;
+}
+.feat1 {
+  position: relative;
+  margin-top: 10rem;
+  margin-right: 50rem;
+  color: orange;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  white-space: nowrap;
+  font-weight: 500;
+}
+.contentfeat2 p {
+  margin-right: 49rem;
+  color: white;
+  font-weight: normal;
+}
+.suit {
+  margin-right: 56rem;
+  padding-top: 40px;
+  color: orange;
+  text-transform: uppercase;
+}
+.tbd {
+  margin-right: 59rem;
+  padding-top: 50px;
+  color: orange;
+  text-transform: uppercase;
+
+}
+
+/* .rounded {
+  height: 10px;
+  width: 10px;
+  background: white;
+  border-radius: 100%;
+  position: static; */
+
+/* } */ 
+
+
+
+/* Mobile Ver */ 
+ @media (max-width: 576px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+
+  .title {
+    margin-top: 200px;
+    margin-left: 2rem;
+    text-transform: uppercase;
+  }
+
+  .banner {
+    width: 100%;
+  }
+
+  .games {
+    width: 100;
+  }
+
+  .features {
+    width: 100%;
+  }
+
+  .contentfeat {
+    position: absolute;
+    max-width: 100%;
+    /* text-align: center; */
+    margin-left: 400px;
+    margin-top: -150px;
+    
+  }
+  .features .contentfeat h6 {
+    color: white;
+    margin-right: 350px;
+    white-space: nowrap;
+  }
+  .features .contentfeat h1 {
+    color: white;
+    margin-right: 330px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+  .contentfeat2 h6 {
+    margin-right: 30rem;
+  }
+  .contentfeat2 p {
+    margin-right: 30rem;
+  }
 }
