--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
+html, body {
+  width: 100%;
 }
 
 .navbar {
@@ -47,23 +47,21 @@ html {
 .banner {
   position: relative;
   max-width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  height: 143vh;
   display: flex;
-  background-size: cover;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.banner img {
+/* .banner img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 900px;
   object-fit: cover;
-}
+} */
 
 .banner .content {
   position: relative;
@@ -95,24 +93,41 @@ html {
   color: black;
   font-weight: 500;
 }
+.bottom-box{
+  text-align: center;
+  position: relative;
+  top: 50vh;
+
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
+.link-text{
+  top: 20rem;
+  color: white;
+  font-size: 1vw;
+  font-weight: bold;
+}
+
+.link-icon{
+  margin-top: 0vh;
+}
 
 .games {
   position: relative;
-  background-color: violet;
+  background-color:black;
 }
 
 .game {
   position: relative;
-  margin-top: 168px;
+  margin-top: 0;
   height: 100%;
-  background-image: url(assets/assets/the-games-bg.jpg);
-  background-size: cover;
   display: flex;
 }
 
 .title {
-  margin-top: 200px;
-  margin-left: 150px;
+  margin-top: 15rem;
+  margin-left: 10rem;
   color: white;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -122,42 +137,45 @@ html {
   margin-left: 150px;
   padding-bottom: 70px;
 }
+
 .contentfeat {
   position: relative;
-  max-width: 750px;
+  max-width: 100%;
+  top: -17vh;
+  /* left: 27vh; */
   /* text-align: center; */
-  margin-left: 400px;
-  margin-top: -150px;
+  /* margin-left: 400px;
+  margin-top: -150px; */
 }
 .features {
   position: relative;
-  max-width: 100%;
+  width: 100%;
+  /* height: 990px; */
+  /* height: 150vh; */
   height: 100vh;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   display: flex;
-  background-size: cover;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  text-align: center;
 }
 
-.features img {
-  position: absolute;
+/* .features img {
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 900px;
   object-fit: cover;
-}
+} */
 .features .contentfeat h6 {
   color: white;
-  margin-left: 42rem;
+  position: relative;
+  left: 56vw;
   white-space: nowrap;
 }
 .features .contentfeat h1 {
   color: white;
-  margin-left: 42rem;
-  margin-bottom: 5rem;
+  position: relative;
+  left: 56vw;
   letter-spacing: 3px;
   text-transform: uppercase;
   font-weight: 400;
@@ -167,50 +185,126 @@ html {
 } */
 .contentfeat2 {
   position: relative;
-  margin-top: 200px;
 }
 .feat1 {
   position: relative;
-  margin-top: 10rem;
-  margin-right: 50rem;
+  margin-top: 30vh;
+  left: 40vw;
   color: orange;
   text-transform: uppercase;
   letter-spacing: 2px;
   white-space: nowrap;
   font-weight: 500;
 }
-.contentfeat2 p {
-  margin-right: 49rem;
+.feat2 {
+  left: 40vw;
+  position: relative;
   color: white;
   font-weight: normal;
 }
 .suit {
-  margin-right: 56rem;
-  padding-top: 40px;
+  left: 40vw;
+  position: relative;
+  top: 1.4vw;
   color: orange;
   text-transform: uppercase;
 }
 .tbd {
-  margin-right: 59rem;
-  padding-top: 50px;
+  left: 40vw;
+  position: relative;
+  top: 3vw;
   color: orange;
   text-transform: uppercase;
 
 }
+.requirements {
+  position: relative;
+  width: 100%;
+  height: 130vh;
+  top: 0;
+}
+#requirements-grid {
+  display: grid;
+  width: 100%;
+  color: white;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 30% 30% 30%;
+  
+}
+.requirements-sys {
+  margin-top: 80vh;
+  margin-left: 10vh;
+}
+#title-sys {
+  margin-top: -60vh;
+}
+.item {
+  background-color: tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#topscore-img {
+  width: 100%;
+  height: 100vh;
+  background: radial-gradient(70.52% 37.27% at 24.21% 47.47%, rgba(35, 15, 15, 0) 0%, rgba(0, 0, 0, 0) 51.1%, #080A0B 99.74%);
+}
 
-/* .rounded {
-  height: 10px;
-  width: 10px;
-  background: white;
-  border-radius: 100%;
-  position: static; */
+/* Image */
+#banner-img {
+  background-image: url(assets/assets/main-bg.jpg);
+  background-size: cover;
+}
+#games-img {
+  background-image: url(assets/assets/the-games-bg.jpg);
+  background-size: cover;
+}
+#features-img {
+  background-image: url(assets/assets/features.jpg);
+  background-size: cover;
+}
+#requirements-img {
+  background-image: url(assets/assets/requirements.png);
+  background-size: cover;
+}
+#topscore-img {
+  background-image: url(assets/assets/top-score-bg.png);
+  background-size: cover;
+}
 
-/* } */ 
-
-
+.icons {
+  position: relative;
+}
+.circle-icon {
+  position: relative;
+  left: 43vw;
+  top: 8vh;
+  width: 0.8vw;
+  height: 0.8vw;
+}
+.vertical-line {
+  position: relative;
+  left: 40.1vw;
+  top: 14vh;
+  width: 5vw;
+}
+.circle-icon2 {
+  position: relative;
+  left: 37.2vw;
+  top: 19.8vh;
+  width: 0.8vw;
+  height: 0.8vw;
+}
+.circle-icon3 {
+  position: relative;
+  left: 36.5vw;
+  top: 26.5vh;
+  width: 0.8vw;
+  height: 0.8vw;
+}
 
 /* Mobile Ver */ 
- @media (max-width: 576px) {
+ @media (max-width: 768px) {
   * {
     margin: 0;
     padding: 0;
@@ -257,9 +351,9 @@ html {
     font-weight: 400;
   }
   .contentfeat2 h6 {
-    margin-right: 30rem;
+    left: 20rem;
   }
   .contentfeat2 p {
-    margin-right: 30rem;
+    left: 10rem;
   }
 }
