--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ html, body {
   width: 100%;
 }
 
+/* Navbar */
+
 .navbar {
   /* background: #131313; */
   background: rgba(15, 15, 15, 0.7);
@@ -42,6 +44,7 @@ html, body {
 #navbarSupportedContent ul li:nth-child(n) a:hover {
   color: #30475E;
 }
+/* Akhir Navbar */
 
 /* Banner  */
 .banner {
@@ -53,15 +56,6 @@ html, body {
   align-items: center;
   text-align: center;
 }
-
-/* .banner img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 900px;
-  object-fit: cover;
-} */
 
 .banner .content {
   position: relative;
@@ -112,10 +106,12 @@ html, body {
 .link-icon{
   margin-top: 0vh;
 }
+/* Akhir Banner */
 
+/* Game */
 .games {
   position: relative;
-  background-color:black;
+  background-color: aqua;
 }
 
 .game {
@@ -137,7 +133,9 @@ html, body {
   margin-left: 150px;
   padding-bottom: 70px;
 }
+/* Akhir Game */
 
+/* Features */
 .contentfeat {
   position: relative;
   max-width: 100%;
@@ -152,21 +150,15 @@ html, body {
   width: 100%;
   /* height: 990px; */
   /* height: 150vh; */
-  height: 100vh;
+  height: 130vh;
   display: flex;
   /* justify-content: center; */
   align-items: center;
 }
-
-/* .features img {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 900px;
-  object-fit: cover;
-} */
 .features .contentfeat h6 {
+  font-size: 1vw;
+  letter-spacing: 0.2rem;
+  font-weight: 100;
   color: white;
   position: relative;
   left: 56vw;
@@ -176,13 +168,10 @@ html, body {
   color: white;
   position: relative;
   left: 56vw;
-  letter-spacing: 3px;
+  letter-spacing: 0.3vw;
   text-transform: uppercase;
   font-weight: 400;
 }
-/* .contentfeat2 {
-  margin-top: 30px;
-} */
 .contentfeat2 {
   position: relative;
 }
@@ -217,61 +206,6 @@ html, body {
   text-transform: uppercase;
 
 }
-.requirements {
-  position: relative;
-  width: 100%;
-  height: 130vh;
-  top: 0;
-}
-#requirements-grid {
-  display: grid;
-  width: 100%;
-  color: white;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 30% 30% 30%;
-  
-}
-.requirements-sys {
-  margin-top: 80vh;
-  margin-left: 10vh;
-}
-#title-sys {
-  margin-top: -60vh;
-}
-.item {
-  background-color: tomato;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#topscore-img {
-  width: 100%;
-  height: 100vh;
-  background: radial-gradient(70.52% 37.27% at 24.21% 47.47%, rgba(35, 15, 15, 0) 0%, rgba(0, 0, 0, 0) 51.1%, #080A0B 99.74%);
-}
-
-/* Image */
-#banner-img {
-  background-image: url(assets/assets/main-bg.jpg);
-  background-size: cover;
-}
-#games-img {
-  background-image: url(assets/assets/the-games-bg.jpg);
-  background-size: cover;
-}
-#features-img {
-  background-image: url(assets/assets/features.jpg);
-  background-size: cover;
-}
-#requirements-img {
-  background-image: url(assets/assets/requirements.png);
-  background-size: cover;
-}
-#topscore-img {
-  background-image: url(assets/assets/top-score-bg.png);
-  background-size: cover;
-}
-
 .icons {
   position: relative;
 }
@@ -302,6 +236,195 @@ html, body {
   width: 0.8vw;
   height: 0.8vw;
 }
+/* Akhir Features */
+
+/* Requirements */
+
+.requirements {
+  position: relative;
+  width: 100%;
+  height: 130vh;
+}
+.text-sys {
+  position: relative;
+  color: white;
+  text-transform: uppercase;
+  font-size: 3.2vw;
+  top: 33vh;
+  letter-spacing: 0.3rem;
+}
+.text-sys2 {
+  position: relative;
+  color: white;
+  font-size: 1vw;
+  font-weight: 100;
+  padding-left: 35vw;
+  padding-top: 14vh;
+  letter-spacing: 0.2rem;
+}
+#requirement-grid {
+  /* background-color: teal; */
+  background-color: transparent;
+  color: white;
+  position: relative;
+  top: 40vh;
+  left: 1vw;
+}
+/* Akhir Requirements */
+
+/* Top Score */
+
+#topscore-img {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: black;
+}
+.title-top {
+  position: relative;
+  color: white;
+}
+.subtitle-top {
+  position: relative;
+  text-transform: uppercase;
+  top: 48vh;
+  left: 10vw;
+  font-size: 3.6vw;
+  font-style: normal;
+  letter-spacing: 0.3vw;
+}
+.title-top p {
+  position: relative;
+  top: 50vh;
+  padding-left: 10vw;
+}
+.title-top a {
+  position: relative;
+  top: 55vh;
+}
+#evan-card {
+  position: relative;
+  top: 15vh;
+  padding-left: 63vw;
+}
+
+.card-body img {
+  position: relative;
+  border-radius: 100%;
+  top: -9vh;
+
+}
+.card {
+  background-color: rgba(255, 255, 255, 0.08);
+  color: white;
+  border-radius: 0.5rem;
+}
+.date {
+  position: relative;
+  white-space: nowrap;
+  color: gray;
+  top: 2vh;
+  font-size: 0.8vw;
+}
+.border-circle {
+  position: relative;
+  width: 4.2rem;
+  height: 4.2rem;
+  left: 0.5vw;
+  top: 0.8vh;
+  border-radius: 100%;
+  background-color: rgba(255, 181, 72, 1);
+}
+.twitter {
+  position: relative;
+  left: 18.3vw;
+  margin-top: -5.6vh;
+}
+.card-title h4 {
+  position: relative;
+  padding-left: 6vw;
+  margin: 0;
+  top: -17.4vh;
+  text-transform: capitalize;
+}
+.card-title p {
+  position: relative;
+  padding-left: 6vw;
+  top: -17.4vh;
+  color: gray;
+}
+.card-text {
+  position: relative;
+  top: -17vh;
+}
+#text-testi {
+  position: relative;
+  top: 1.3vh;
+}
+.card-text2 {
+  color: rgba(255, 255, 255, 1);
+}
+#jade {
+  position: relative;
+  border-radius: 100%;
+  width: 4.2rem;
+  height: 4.2rem;
+}
+#jade-card {
+  position: relative;
+  top: 20vh;
+  padding-left: 50vw;
+}
+.date2 {
+  position: relative;
+  white-space: nowrap;
+  color: gray;
+  top: 6vh;
+  left: -7.7vw;
+  font-size: 0.8vw;
+}
+#aaron {
+  position: relative;
+  border-radius: 100%;
+  width: 4.2rem;
+  height: 4.2rem;
+}
+#aaron-card {
+  position: relative;
+  top: 25vh;
+  padding-left: 58vw;
+}
+.date3 {
+  position: relative;
+  white-space: nowrap;
+  color: gray;
+  top: 6vh;
+  left: -6.7vw;
+  font-size: 0.8vw;
+}
+
+/* Image */
+#banner-img {
+  background-image: url(assets/assets/main-bg.jpg);
+  background-size: cover;
+}
+#games-img {
+  background-image: url(assets/assets/the-games-bg.jpg);
+  background-size: cover;
+}
+#features-img {
+  background-image: url(assets/assets/features.jpg);
+  background-size: cover;
+}
+#requirements-img {
+  background-image: url(assets/assets/requirements.png);
+  background-size: cover;
+}
+#topscore-img {
+  background-image: url(assets/assets/top-score-bg.png);
+  background-size: cover;
+}
+
 
 /* Mobile Ver */ 
  @media (max-width: 768px) {
